--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Carleton College Energy Dashboard</title>
+    <link rel="shortcut icon" type="image/png" href="../static/images/jeff_square_head.png"/>
     <script src="http://d3js.org/d3.v4.js" charset="utf-8"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
