fixed active links and added correct svgs

--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -76,6 +76,11 @@
     </table>
 </div>
 
+<script>
+    $("a").removeClass("active");
+    $("#anomalies-link").addClass("active");
+</script>
+
 <script type="text/javascript" src="../static/js/anomaliesgraph.js"></script>
 <script src="../static/js/anomalies.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
