--- a/templates/points.html
+++ b/templates/points.html
@@ -28,6 +28,11 @@
     </div>
 </main>
 
+<script>
+    $("a").removeClass("active");
+    $("#points-link").addClass("active");
+</script>
+
 <script type="text/javascript" src="../static/js/initialviz.js"></script>
 <script src="../static/js/points.js"></script>
 {% endblock %}
