--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -56,6 +56,11 @@
     <div class="col-md-10 col-md-offset-1 svg" id="visualization"></div>
 </div>
 
+<script>
+    $("a").removeClass("active");
+    $("#trends-link").addClass("active");
+</script>
+
 <script type="text/javascript" src="../static/js/linegraph.js"></script>
 <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 <script src="../static/js/heatmap.js"></script>
