--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
 
 <body>
 <nav class="navbar navbar-dark" style="background-color: #343a40; margin-bottom: 0px;">
-    <a class="navbar-title" href="#">Carleton Energy Dashboard</a>
+    <p class="navbar-title" href="#">Carleton Energy Dashboard</p>
 
 </nav>
 <div class="container-fluid">
