--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -214,7 +214,6 @@ h1 {
     color: white;
     border-radius: 15px;
 
-
 }
 
 #anomaly-container {
@@ -245,7 +244,6 @@ h1 {
     color: white;
     border-radius: 15px;
 
-
 }
 
 #timepicker {
@@ -269,4 +267,20 @@ p.verification-text {
     padding: 15px 15px;
     font-size: 20px;
     line-height: 20px;
+}
+
+#visualization {
+    display: inline-block;
+    position: relative;
+    width: 80%;
+    padding-bottom: 100%;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.svg-content {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
