--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -38,7 +38,8 @@
 <div class="row">
     <div id="foobar" class="col-md-8 form-inline col-md-offset-2">
         <div class="col-md-3">
-            <input id="value-query" type="text" class="value-query form-control" placeholder="Value Query" style="width: 100%;"/>
+            <input id="value-query" type="text" class="value-query form-control" placeholder="Value Query"
+                   style="width: 100%;"/>
         </div>
         <div class=" form-group col-md-5">
             <div id="timepicker" class="input-group" style="width: 100%">
@@ -48,7 +49,9 @@
             </div>
         </div>
         <div class="form-group col-md-4">
-            <button type="button" id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #563d7c">Graph</button>
+            <button type="button" id="submit-search-query" type="button" class="btn btn-primary"
+                    style="background-color: #563d7c">Graph
+            </button>
             <button type="button" id="create-rule" class="btn btn-secondary">Create Alert Rule</button>
         </div>
     </div>
@@ -58,9 +61,10 @@
 </div>
 <hr>
 
-
-<div class="col-md-10 svg" id="visualization"></div>
-<div class="col-md-2" id="anomalous-points"></div>
+<div id="graph">
+    <div class="col-md-8 svg" id="visualization"></div>
+    <div class="col-md-2" id="anomalous-points"></div>
+</div>
 
 
 <div id="result-table" hidden>
