--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,7 +43,8 @@ body {
 }
 
 .sidebar .nav-link.active {
-    color: #007bff;
+    color: black;
+    font-weight: bold;
 }
 
 .sidebar .nav-link:hover .feather,
