--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -10,24 +10,43 @@
 </h4>
 <div id="anomaly-container">
     <form id="series-0" class="series">
-        <select class="building" multiple>
-        </select>
-        <select class="floor" multiple>
-        </select>
-        <select class="room" multiple>
-        </select>
-        <select class="device" multiple>
-        </select>
-        <select class="point" multiple>
-        </select>
-        <select class="tag" multiple>
-        </select>
-        <select class="type" multiple>
-        </select>
-        <select class="unit" multiple>
-        </select>
-        <select class="measurement" multiple>
-        </select>
+        <span class="form-group">
+            <label class="form-label">Building</label>
+            <select class="building" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Floor</label>
+            <select class="floor" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Room</label>
+            <select class="room" multiple>
+            </select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Device</label>
+            <select class="device" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Point</label>
+            <select class="point" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Tag</label>
+            <select class="tag" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Type</label>
+            <select class="type" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Unit</label>
+            <select class="unit" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Measurement</label>
+            <select class="measurement" multiple></select>
+        </span>
         <p class="point-verification-text"></p>
 
         <p class="value-verification-text"></p>
