--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -9,27 +9,45 @@
     Point Selector
 </h4>
 <div id="trend-container">
-    <form id="series-0" class="series"
-    ">
-    <select class="building" multiple>
-    </select>
-    <select class="floor" multiple>
-    </select>
-    <select class="room" multiple>
-    </select>
-    <select class="device" multiple>
-    </select>
-    <select class="point" multiple>
-    </select>
-    <select class="tag" multiple>
-    </select>
-    <select class="type" multiple>
-    </select>
-    <select class="unit" multiple>
-    </select>
-    <select class="measurement" multiple>
-    </select>
-    <p class="value-verification-text"></p>
+    <form id="series-0" class="series">
+    <span class="form-group">
+            <label class="form-label">Building</label>
+            <select class="building" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Floor</label>
+            <select class="floor" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Room</label>
+            <select class="room" multiple>
+            </select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Device</label>
+            <select class="device" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Point</label>
+            <select class="point" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Tag</label>
+            <select class="tag" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Type</label>
+            <select class="type" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Unit</label>
+            <select class="unit" multiple></select>
+        </span>
+        <span class="form-group">
+            <label class="form-label">Measurement</label>
+            <select class="measurement" multiple></select>
+        </span>
+        <p class="value-verification-text"></p>
     </form>
 </div>
 <div class="row">
@@ -42,7 +60,9 @@
             </div>
         </div>
         <div class="form-group col-md-2">
-            <button id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #1967d2">Graph</button>
+            <button id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #1967d2">
+                Graph
+            </button>
         </div>
     </div>
     <div class="col-md-3">
