fixed search ui bug

--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -10,7 +10,7 @@
 </h4>
 <div id="trend-container">
     <form id="series-0" class="series">
-    <span class="form-group">
+       <span class="form-group">
             <label class="form-label">Building</label>
             <select class="building" multiple></select>
         </span>
@@ -47,7 +47,8 @@
             <label class="form-label">Measurement</label>
             <select class="measurement" multiple></select>
         </span>
-        <p class="value-verification-text"></p>
+        <!--</span>
+        <p class="value-verification-text"></p>-->
     </form>
 </div>
 <div class="row">
