--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -23,7 +23,7 @@
             <select class="room" multiple>
             </select>
         </span>
-        <span class="form-group">
+        <span class="form-group" style="display: none;">
             <label class="form-label">Device</label>
             <select class="device" multiple></select>
         </span>
