--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,7 @@
                             Anomalies
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a id="points-link" class="nav-link" href="/points">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -64,7 +64,7 @@
                             </svg>
                             Points
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a id="rules-link" class="nav-link" href="/rules">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
