--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -52,17 +52,20 @@
     </form>
 </div>
 <div class="row">
-    <div id="foobar" class="col-md-4 form-inline col-md-offset-4">
-        <div class=" form-group col-md-9">
+    <div id="foobar" class="col-md-6 form-inline col-md-offset-3">
+        <div class=" form-group col-md-7">
             <div id="timepicker" class="input-group" style="width: 100%">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                 <input type="text" class="form-control" name="datetimes" id="daterange"
                        style="background-color: white; cursor: pointer" readonly/>
             </div>
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-4">
             <button id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #1967d2">
                 Graph
+            </button>
+            <button id="reset-form" type="button" class="btn btn-danger">
+                Reset
             </button>
         </div>
     </div>
