--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -57,21 +57,24 @@
 <div class="row">
     <div id="foobar" class="col-md-8 form-inline col-md-offset-2">
         <div class="col-md-3">
-            <input id="value-query" type="text" class="value-query form-control" placeholder="Value Query"
+            <input id="value-query" type="text" class="value-query form-control" placeholder="Value Query (E.g: '~< 62')"
                    style="width: 100%;"/>
         </div>
-        <div class=" form-group col-md-5">
+        <div class=" form-group col-md-4">
             <div id="timepicker" class="input-group" style="width: 100%">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                 <input type="text" class="form-control" name="datetimes" id="daterange"
                        style="background-color: white; cursor: pointer" readonly/>
             </div>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-5">
             <button type="button" id="submit-search-query" type="button" class="btn btn-primary"
                     style="background-color: #563d7c">Graph
             </button>
             <button type="button" id="create-rule" class="btn btn-secondary">Create Alert Rule</button>
+            <button id="reset-form" type="button" class="btn btn-danger">
+                Reset
+            </button>
         </div>
     </div>
     <div class="col-md-2">
