branch organization and reordering of navigation

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,7 +60,7 @@
                                 <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
                                 <polyline points="17 6 23 6 23 12"></polyline>
                             </svg>
-                            Trends
+                            Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
@@ -72,7 +72,7 @@
                                 <line x1="12" y1="9" x2="12" y2="13"></line>
                                 <line x1="12" y1="17" x2="12" y2="17"></line>
                             </svg>
-                            Anomalies
+                            Anomaly Heuristics
                         </a>
                     </li>
                     <li class="nav-item">
@@ -83,7 +83,7 @@
                                 <circle cx="12" cy="12" r="10"></circle>
                                 <circle cx="12" cy="12" r="3"></circle>
                             </svg>
-                            API Documentation
+                            Search
                         </a>
                     </li>
                     <li class="nav-item">
@@ -93,7 +93,7 @@
                                  stroke-linejoin="round" class="feather feather-bookmark">
                                 <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path>
                             </svg>
-                            Rules
+                            About
                         </a>
                     </li>
                 </ul>
