--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,48 +53,45 @@
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
+                        <a id="anomalies-link" class="nav-link" href="/anomalies">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-activity">
+                                <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path>
+                                <line x1="12" y1="9" x2="12" y2="13"></line>
+                                <line x1="12" y1="17" x2="12" y2="17"></line>
+                            </svg>                            
+                            Dashboard                            
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a id="trends-link" class="nav-link" href="/search">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                 stroke-linejoin="round" class="feather feather-trending-up">
+                                 stroke-linejoin="round" class="feather feather-search">
                                 <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
                                 <polyline points="17 6 23 6 23 12"></polyline>
                             </svg>
-                            Dashboard
+                            Search
                         </a>
                     </li>
                     <li class="nav-item">
                         <a id="anomalies-link" class="nav-link" href="/anomalies">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                 stroke-linejoin="round" class="feather feather-alert-triangle">
+                                 stroke-linejoin="round" class="feather feather-zap">
                                 <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path>
                                 <line x1="12" y1="9" x2="12" y2="13"></line>
                                 <line x1="12" y1="17" x2="12" y2="17"></line>
-                            </svg>
-                            
-                            Search
-                            
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="points-link" class="nav-link" href="https://documenter.getpostman.com/view/14650000/TzJsfy7D">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                 stroke-linejoin="round" class="feather feather-disc">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <circle cx="12" cy="12" r="3"></circle>
-                            </svg>
-                            
-                            Anomaly Heuristics
-
+                            </svg>                            
+                            Anomaly Heuristics                            
                         </a>
                     </li>
                     <li class="nav-item">
                         <a id="about-link" class="nav-link" href="/about">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                 stroke-linejoin="round" class="feather feather-bookmark">
+                                 stroke-linejoin="round" class="feather feather-package">
                                 <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path>
                             </svg>
                             About
