Update anomalies search html page

--- a/templates/anomalies-heuristics-search.html
+++ b/templates/anomalies-heuristics-search.html
@@ -20,7 +20,7 @@
                 </ul>
         </div>
         <br><br>
-        <div style="display:inline-block;">
+        <div style="display:flex;">
         <div class="dropdown" id="first-new-dropdown" style="display: none;">
         <p style="display:inline-block;" id="first-param"></p>
         <button class="btn btn-primary dropdown toggle" type="button" data-toggle="dropdown" name="first-new-button">>
