--- a/templates/about.html
+++ b/templates/about.html
@@ -1,20 +1,20 @@
 {%extends "layout.html" %}
-
 {% block body %}
-    <h2>
-    About the Project
-    </h2>
-    <p>
-        The previous three energy comps groups have done an excellent job in creating an automated data pipeline which receives energy consumption data from <i>points</i>, or a value that can be observed remotely 
-        (i.e. a room's temperature). Initial steps have been made to present a user interface that displays anomalies found in points around campus as well as energy usage trends capable of sorting points according
-        to user inputted characteristics.<br><br>
-        
-        We, the fourth iteration of the Energy Analytics comps group, aim to build on the foundation of this previous work by producing an analytical tool with a user interface catered to the Facilities Team and those
-        who oversee the energy usage at Carleton. We're confident that by improving the professionalism of the data storage, website interface, and providing more extensive user features, that we can deliver this tool.
-        These improvements would allow for more ease of querying points around campus as well as quickly identifying anomalies around campus.
-    </p>
-    <h2>
-        Looking for API documentation? Click <a href="https://documenter.getpostman.com/view/14650000/TzJsfy7D">here</a>.
-    </h2>
+
+<h2 style="text-align: center;">
+    About
+</h2>
+<div>
+Entering the fourth iteration of the Energy Analytics computer science comps project, we aim to build on the foundation of previous work completed by the former groups in a variety of ways. Our ultimate goal is to produce an analytical tool with a user interface catered to the needs of the Facilities team whom oversee the usage of energy in Carleton affiliated buildings on campus. 
+
+    
+Previous groups have done an excellent job in crystallizing an automated data pipeline which receives energy consumption data from points. Along with establishing the pipeline, they have made great strides in interpreting the naming scheme of such points, and have written descriptive documentation detailing how to query such points from the server where the data is stored. Initial steps have been taken to present a user interface displaying anomaly detection of points and energy usage trends capable of being sorted by characteristics of the points.
+    
+We propose to improve the professionalism of the data storage and website interface, and provide more extensive user features with the website that allow for the user to easily query points around campus and quickly identify anomalies around campus. Our improvements can be broken up into four categories: Website Interface, API, Data Management, and Data Analysis. In the following sections, we will describe in depth what we plan to improve for each category, and we will propose an order in which we will complete the tasks.
+</div>
+
+
+<script type="text/javascript" src="../static/js/rules.js"></script>
+<script src="../static/js/anomalies.js"></script>
 
 {% endblock %}
