--- a/templates/anomalies-heuristics-search.html
+++ b/templates/anomalies-heuristics-search.html
@@ -50,7 +50,7 @@
         </form>
     </div>
     </div>
-    <table class="table table-bordered" style="width: 75%; margin-left: auto; margin-right:auto; display: none;" id="results-table">
+    <table class="table table-bordered" style="width: fit-content; margin-left: auto; margin-right:auto; display: none;" id="results-table">
         <thead>
             <tr>
                 <th scope="col">Building</th>
