--- a/templates/anomalies-heuristics-search.html
+++ b/templates/anomalies-heuristics-search.html
@@ -46,8 +46,25 @@
             </ul>
         <form style="display: inline-block;" id="second-num-dropdown">
             <input type="number" id="second-num-input" min="1" max="100" style="width: fit-content; height: 50px; margin-right: 40px;" value=93>
-            <input onclick="generateTable();" style="float:right; width: fit-content; height: 40px; margin-left: auto; margin-right: auto; position: absolute;" type="button" value="Search">
+            <!-- <input onclick="generateTable();" style="float:right; width: fit-content; height: 40px; margin-left: auto; margin-right: auto; position: absolute;" type="button" value="Search"> -->
         </form>
+    </div>
+    <div class="dropdown" id="third-new-dropdown" style="display: none;">
+    <p style="display: inline-block; width: fit-content; height: 50px;" id="building-param"></p>
+    <button class="btn btn-primary dropdown toggle" type="button" data-toggle="dropdown" name="building-button" style="width: fit-content; height: 50px; margin-right: 40px;">All Buildings
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu" id="building-dropdown">
+            <li><a class="dropdown-item" href="#" onclick="changeBuildingSelection(this.innerHTML)">All Buildings</a></li>
+            <li><a class="dropdown-item" href="#" onclick="changeBuildingSelection(this.innerHTML)">Evans</a></li>
+            <li><a class="dropdown-item" href="#" onclick="changeBuildingSelection(this.innerHTML)">Hulings</a></li>
+            <li><a class="dropdown-item" href="#" onclick="changeBuildingSelection(this.innerHTML)">Townhouses</a></li>
+            <li><a class="dropdown-item" href="#" onclick="changeBuildingSelection(this.innerHTML)">Weitz</a></li>
+            <li><a class="dropdown-item" href="#" onclick="changeBuildingSelection(this.innerHTML)">Cassat</a></li>
+            <li><a class="dropdown-item" href="#" onclick="changeBuildingSelection(this.innerHTML)">Boliou</a></li>
+        </ul>
+        <!-- <form style="display: inline-block;" id="second-num-dropdown"> -->
+        <input onclick="generateTable();" style="float:right; width: fit-content; height: 40px; margin-left: auto; margin-right: auto; position: absolute;" type="button" value="Search">
+        <!-- </form> -->
     </div>
     </div>
     <table class="table table-bordered" style="width: fit-content; margin-left: auto; margin-right:auto; display: none;" id="results-table">
